Updated photo upload

--- a/src/card_interactions/templates/drawer.html
+++ b/src/card_interactions/templates/drawer.html
@@ -47,6 +47,9 @@
             </div>
         </div>
 
+        {% include "card_image.html" with card=card %}
+
+
         <div class=" bg-grey-100 my-3">
             <div class="bg-grey-100">
                 <div class="bg-gray-50 rounded-lg shadow">
