--- a/src/card_interactions/templates/edit_title.html
+++ b/src/card_interactions/templates/edit_title.html
@@ -12,13 +12,15 @@
         {{ form }}
         <div class="text-black">
         <input type="text" name="title" placeholder="{{title}}" class="w-full border-2 border-ch-gray-light bg-ch-gray-dark rounded-lg focus:outline-ch-green-light focus:outline-0 focus:outline-offset-0 focus:border-2 focus:border-woys-purple focus:shadow-none focus:ring-0 focus:shadow-0"><br>
-        <select name="card_type" class="w-full border-2 border-ch-gray-light bg-ch-gray-dark rounded-lg focus:outline-ch-green-light focus:outline-0 focus:outline-offset-0 focus:border-2 focus:border-woys-purple focus:shadow-none focus:ring-0 focus:shadow-0">
+        <select name="card_type" class=" text-black w-full border-2 border-ch-gray-light bg-ch-gray-dark rounded-lg focus:outline-ch-green-light focus:outline-0 focus:outline-offset-0 focus:border-2 focus:border-woys-purple focus:shadow-none focus:ring-0 focus:shadow-0">
             <option value="1">{{workshop.legend_label_1}}</option>
             <option value="2">{{workshop.legend_label_2}}</option>
             <option value="3">{{workshop.legend_label_3}}</option>
             <option value="4">{{workshop.legend_label_4}}</option>,
             <option value="5">{{workshop.legend_label_5}}</option>
+            {% if card.image %}
             <option value="6">Use Image</option>
+            {% endif %}
         </select>
         </form>
         </div>
@@ -41,7 +43,9 @@
                         <option value="3">{{workshop.legend_label_3}}</option>
                         <option value="4">{{workshop.legend_label_4}}</option>,
                         <option value="5">{{workshop.legend_label_5}}</option>
+                        {% if card.image %}
                         <option value="6">Use Image</option>
+                        {% endif %}
                     </select>
                     </form>
                 <button class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Submit</button>
@@ -64,7 +68,9 @@
                         <option value="3">{{workshop.legend_label_3}}</option>
                         <option value="4">{{workshop.legend_label_4}}</option>,
                         <option value="5">{{workshop.legend_label_5}}</option>
+                        {% if card.image %}
                         <option value="6">Use Image</option>
+                        {% endif %}
                     </select>
                     </form>
                 <button class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Submit</button>
@@ -86,7 +92,9 @@
                         <option value="3">{{workshop.legend_label_3}}</option>
                         <option value="4">{{workshop.legend_label_4}}</option>,
                         <option value="5">{{workshop.legend_label_5}}</option>
+                        {% if card.image %}
                         <option value="6">Use Image</option>
+                        {% endif %}
                     </select>
                     </form>
                 <button class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Submit</button>
@@ -109,7 +117,9 @@
                         <option value="3">{{workshop.legend_label_3}}</option>
                         <option value="4">{{workshop.legend_label_4}}</option>,
                         <option value="5">{{workshop.legend_label_5}}</option>
+                        {% if card.image %}
                         <option value="6">Use Image</option>
+                        {% endif %}
                     </select>
                     </form>
                 <button class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Submit</button>
@@ -118,9 +128,8 @@
 {% elif type == 'image_card' %}
 <div style="background: #78E7BF;" class="w-full max-w bg-white border border-gray-200 rounded-lg shadow  ">
     <div class="flex flex-col align-text-top items-center m-8">
-        <i class="fa-solid fa-circle-down fa-2xl"></i><br>
-        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">{{type}}</h5>
-        <form method="post" enctype="multipart/form-data">
+        <img src="https://mapmaker.nl/static/icons/{{workshop.legend_icon_5}}" style="height: 100px; width: 100px;" class=" h-6 w-6 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
+        <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">Image Card</h5>
             {% csrf_token %}
             {{ form }}
             <div class="text-black">
@@ -131,9 +140,12 @@
                 <option value="3">{{workshop.legend_label_3}}</option>
                 <option value="4">{{workshop.legend_label_4}}</option>,
                 <option value="5">{{workshop.legend_label_5}}</option>
+                {% if card.image %}
                 <option value="6">Use Image</option>
+                {% endif %}
             </select>
             </form>
+        <button class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Submit</button>
     </div>
     </div>
 {% elif type == 'empty' %}
@@ -152,7 +164,9 @@
                         <option value="3">{{workshop.legend_label_3}}</option>
                         <option value="4">{{workshop.legend_label_4}}</option>,
                         <option value="5">{{workshop.legend_label_5}}</option>
+                        {% if card.image %}
                         <option value="6">Use Image</option>
+                        {% endif %}
                     </select>
                 </form>
                 <button class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Submit</button>
