--- a/src/card_interactions/templates/card_image.html
+++ b/src/card_interactions/templates/card_image.html
@@ -7,6 +7,7 @@
                 <img src="{% static '/icons/image-solid.svg' %}" class=" h-4 w-4 pb-2 mr-3 sm:h-9" alt="mapmaker Logo" />
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">Image </h5>
             </div>
+            {% if user.is_authenticated%}
             <form id='form' hx-indicator="#spinner" hx-encoding='multipart/form-data'hx-target="#drawer" hx-post='/card/{{card.id}}/upload/image/' class="p-4">
                 {% csrf_token %}
                     <div>
@@ -17,6 +18,7 @@
                     <button class="text-gray-900 bg-white border border-gray-300 focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:text-white dark:border-gray-600 dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700">Upload</button>
                 </div>
             </form>
+            {% endif %}
             {% if card.image %}
             {% if type != 'image_card' %}
             <div class="items-center  sm:flex">
