--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -258,7 +258,7 @@
                             <a href="https://github.com/two-trick-pony-NL/mapmaker" class="hover:underline">Source Code</a>
                         </li>
 						<li class="mb-4">
-                            <a href="https://upptime.petervandoorn.com/history/mapmaker-prod" class="hover:underline">Status</a>
+                            <a href="https://status.mapmaker.nl/" class="hover:underline">Status</a>
                         </li>
                     </ul>
                 </div>
