--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -181,6 +181,16 @@
 </div>
 </nav>
 <div style="height: 70px;"></div>
+{% if MAINTENANCEMODE %}
+<div class="flex p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
+	<svg aria-hidden="true" class="flex-shrink-0 inline w-5 h-5 mr-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"></path></svg>
+	<span class="sr-only">Info</span>
+	<div>
+	  <span class="font-medium">We are experiencing some issues</span> {{ALERT_TEXT}}<br>
+	  <p>Check our <a href="https://status.mapmaker.nl">status page</a> to learn what is going on.</p>
+	</div>
+  </div>
+{% endif %}
 {% if messages %}
 	<ul class="messages">
 		{% for message in messages %}
