--- a/src/users/templates/user_profile_table.html
+++ b/src/users/templates/user_profile_table.html
@@ -1,4 +1,4 @@
-<div id="table" class="relative overflow-x-auto">
+<div id="userdetails" class="relative overflow-x-auto">
   <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
       <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
       </thead>
@@ -18,39 +18,41 @@
             <td class="px-6 py-4">
               {{user.last_name}}
             </td>
-            <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-              <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                  Email
-              </th>
-              <td class="px-6 py-4">
-                {{user.email}}
-              </td>
-              <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-                <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                    Organisation
-                </th>
-                <td class="px-6 py-4">
-                  {{user.organisation}}
-                </td>
-                <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-                  <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                      LinkedIn
-                  </th>
-                  <td class="px-6 py-4">
-                    {{user.linkedin}}
-                  </td>
-                  <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-                    <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                        Active Workshop
-                    </th>
-                    <td class="px-6 py-4">
-                      {{user.active_workshop}}
-                    </td>
-                </tr>
-              </tr>
-            </tr>
           </tr>
-        </tr>
+          <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+            <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                Email
+            </th>
+            <td class="px-6 py-4">
+              {{user.email}}
+            </td>
+          </tr>
+          <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+            <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                Organisation
+            </th>
+            <td class="px-6 py-4">
+              {{user.organisation}}
+            </td>
+          </tr>
+          <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+            <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                LinkedIn
+            </th>
+            <td class="px-6 py-4">
+              {{user.linkedin}}
+            </td>
+          </tr>
+          <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+            <th scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                Active Workshop
+            </th>
+            <td class="px-6 py-4">
+              {{user.active_workshop}}
+            </td>
+          </tr>
       </tbody>
   </table>
 </div>
+
+
