--- a/src/users/templates/user_profile_table_edit.html
+++ b/src/users/templates/user_profile_table_edit.html
@@ -23,5 +23,5 @@
       <input type="text" name="linkedin" value="{{user.linkedin}}" class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">
     </div>
 </dl>
-<button class="inline-flex items-center px-4 py-2 text-sm font-medium text-center text-white bg-grey-700 rounded-lg hover:bg-grey-800 focus:ring-4 focus:outline-none focus:ring-grey-300  dark:hover:bg-grey-700 dark:focus:ring-grey-800">Save</button>
-  </form>
+<button class="m-4 inline-flex items-center px-4 py-2 text-sm font-medium text-center text-white bg-gray-700 rounded-lg hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-gray-300  dark:hover:bg-gray-700 dark:focus:ring-gray-800">Save</button>
+</form>
