--- a/src/users/templates/userprofile.html
+++ b/src/users/templates/userprofile.html
@@ -36,7 +36,7 @@
                         </li>
                     </ul>
                     <div class="flex mt-4 space-x-3 md:mt-6">
-                        <a href="#" class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2  dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Upload picture</a>
+                        <a href="profile/{{user.id}}/upload/image" class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2  dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Upload picture</a>
                     </div>
 
                     </div>
