--- a/src/users/templates/userprofile.html
+++ b/src/users/templates/userprofile.html
@@ -12,17 +12,23 @@
             </div>
             <div class="mx-auto max-w-5xl py-6 sm:px-6 lg:px-8">
                 <div class="flex flex-col items-center pb-10">
-                    {% if not user.avatar.url%}
-                    <div class="flex items-center mt-4 space-x-3">
-                        <svg class="text-gray-200 w-14 h-14 " aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zm-2 4a5 5 0 00-4.546 2.916A5.986 5.986 0 0010 16a5.986 5.986 0 004.546-2.084A5 5 0 0010 11z" clip-rule="evenodd"></path></svg>
-                    </div>
-                    {% else %}
+                    {% if user.avatar %}
                     <img class="w-24 h-24 mb-3 rounded-full shadow-lg" src="{{user.avatar.url}}" alt="{{user.firstname}} profile picture"/>
+                    {% else %}
+                        <div class="flex items-center mt-4 space-x-3">
+                            <svg class="text-gray-200 w-14 h-14 " aria-hidden="true" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-6-3a2 2 0 11-4 0 2 2 0 014 0zm-2 4a5 5 0 00-4.546 2.916A5.986 5.986 0 0010 16a5.986 5.986 0 004.546-2.084A5 5 0 0010 11z" clip-rule="evenodd"></path></svg>
+                        </div>                    
                     {% endif %}
                     <h5 class="mb-1 text-xl font-medium text-gray-900 ">{{user.first_name}} {{user.last_name}}</h5>
                     <span class="text-m text-gray-500 ">{{user.organisation}}</span>
                     <div class="flex mt-4 space-x-3 md:mt-6">
-                        <a href="profile/{{user.id}}/upload/image" class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2  dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">Upload picture</a>
+                        <a href="profile/{{user.id}}/upload/image" class="text-white bg-gray-700 hover:bg-gray-800 focus:ring-4 focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 mr-2 mb-2  dark:hover:bg-gray-700 focus:outline-none dark:focus:ring-gray-800">
+                            Upload picture
+                            {%  if user.avatar %}
+                            {% else %}
+                                <span class="inline-flex items-center justify-center w-4 h-4 ml-2 text-xs font-semibold text-red-500 bg-red-300 rounded-full"></span>
+                            {% endif %}
+                        </a>
                     </div>
                     </div>
                     <div class="mx-auto max-w-7xl px-6 lg:px-8">
@@ -31,6 +37,10 @@
                         </div>
                         <button hx-indicator="#spinner" hx-swap="outerHTML" hx-target="#userdetails" hx-get="profile/{{user.id}}/edit" class="m-4 inline-flex items-center px-4 py-2 text-sm font-medium text-center text-white bg-gray-700 rounded-lg hover:bg-gray-800 focus:ring-4 focus:outline-none focus:ring-gray-300  dark:hover:bg-gray-700 dark:focus:ring-gray-800" >
                             Click To Edit
+                            {%  if user.organisation and user.linkedin %}
+                            {% else %}
+                                <span class="inline-flex items-center justify-center w-4 h-4 ml-2 text-xs font-semibold text-red-500 bg-red-300 rounded-full"></span>
+                            {% endif %}
                         </button>
                         <button type="button" hx-indicator="#spinner" hx-get="/user/{{user.id}}/delete" hx-target="#main" hx-confirm="Are you sure you wish to delete your account? This cannot be reversed" class="m-4 py-2.5  text-red-700 hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-xs px-5 text-center   dark:hover:text-white dark:hover:bg-red-600 dark:focus:ring-red-900">Delete account</button>  
                     </div>
