upgraded email template

--- a/src/emailhandler/templates/email_base.html
+++ b/src/emailhandler/templates/email_base.html
@@ -89,12 +89,12 @@
     }
 
     .btn-primary table td:hover {
-        background-color: #34495e !important;
+        background-color: #60b898 !important;
     }
 
     .btn-primary a:hover {
-        background-color: #34495e !important;
-        border-color: #34495e !important;
+        background-color: #60b898 !important;
+        border-color: #000 !important;
     }
     }
     </style>
@@ -111,7 +111,7 @@
                 <table role="presentation" class="main" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; background: #ffffff; border-radius: 3px; width: 100%;" width="100%">
 
                 <!-- START MAIN CONTENT AREA -->
-    <img src="https://mapmaker.nl/static/images/mapmaker_logo.png" alt="Mapmaker logo"style="width:150px;">
+                <img src="https://mapmaker.nl/static/images/mapmaker_logo.png" alt="Mapmaker logo"style="width:150px;">
                 <tr>
                     <td class="wrapper" style="font-family: sans-serif; font-size: 14px; vertical-align: top; box-sizing: border-box; padding: 20px;" valign="top">
                     <table role="presentation" border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%;" width="100%">
@@ -126,7 +126,7 @@
                                     <table role="presentation" border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: auto;">
                                     <tbody>
                                         <tr>
-                                        <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; border-radius: 5px; text-align: center; background-color: #3498db;" valign="top" align="center" bgcolor="#3498db"> <a href="{{CTA_URL}}" target="_blank" style="border: solid 1px #3498db; border-radius: 5px; box-sizing: border-box; cursor: pointer; display: inline-block; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-decoration: none; text-transform: capitalize; background-color: #E0F9F0; border-color: #E0F9F0; color: #000;">{{CTA_TEXT}}</a> </td>
+                                            <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; border-radius: 5px; text-align: center; background-color: #78E7BF; valign=top; align=center; bgcolor=#3498db"><a href="{{CTA_URL}}" target="_blank" style="border: solid 1px #78E7BF; border-radius: 5px; box-sizing: border-box; cursor: pointer; display: inline-block; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; text-decoration: none; text-transform: capitalize; background-color: #78E7BF; border-color: #78E7BF; color: #000; box-shadow: 3px 3px;">{{CTA_TEXT}}</a> </td>
                                         </tr>
                                     </tbody>
                                     </table>
