--- a/src/dashboard/templates/grid_zoom_in.html
+++ b/src/dashboard/templates/grid_zoom_in.html
@@ -139,7 +139,7 @@
                 {{workshop.legend_label_5}}
             </div>
             {% elif card.cardtype == 'image_card' %}
-            <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background-image: url('{{card.image.url}}'); background-size: cover; background-position: center;"><input type='hidden' name='item' value='{{ card.id}}'/>
+            <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background-image: url('{{card.image.thumbnails.large.url}}'); background-size: cover; background-position: center;"><input type='hidden' name='item' value='{{ card.id}}'/>
 
                 </div>
         {% endif %}
