--- a/src/dashboard/templates/grid_zoom_standard.html
+++ b/src/dashboard/templates/grid_zoom_standard.html
@@ -111,7 +111,7 @@
                 {{ card.title|truncatechars:20}}
             </div>
         {% elif card.cardtype == 'image_card' %}
-        <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background-image: url('{{card.image.url}}'); background-size: cover; background-position: center;"><input type='hidden' name='item' value='{{ card.id}}'/>
+        <div class="hexagon" hx-indicator="#spinner" hx-target="#drawer" hx-get="/card/{{ card.id }}/open" style="background-image: url('{{card.image.thumbnails.medium.url}}'); background-size: cover; background-position: center;"><input type='hidden' name='item' value='{{ card.id}}'/>
         </div>
     {% endif %}
     {% endfor %}
