--- a/src/card_interactions/templates/resources.html
+++ b/src/card_interactions/templates/resources.html
@@ -28,7 +28,7 @@
                     <div class=" p-2 inline-flex items-center text-base text-gray-900 ">
                         {{resource.owner.first_name}} {{resource.owner.last_name}}
                         <div class="flex-shrink-0 p-2">
-                            <img class="w-8 h-8 rounded-full" src="{{resource.owner.avatar_url}}" alt="Resource owner avatar image">
+                            <img class="w-8 h-8 rounded-full" src="{{resource.owner.avatar.thumbnails.small.url}}" alt="Resource owner avatar image">
                         </div>
                     </div>
 
