--- a/src/workshop/templates/workshop_participants.html
+++ b/src/workshop/templates/workshop_participants.html
@@ -35,7 +35,11 @@
             <tr class="bg-white border-b   hover:bg-gray-50 dark:hover:bg-gray-600">
 
                 <th scope="row" class="flex items-center px-6 py-4 text-gray-900 whitespace-nowrap ">
-                    <img class="w-10 h-10 rounded-full" src="{{participant.avatar.url}}" alt="Jese image">
+                    {% if participant.avatar %}
+                    <img class="w-10 h-10 rounded-full" src="{{participant.avatar.thumbnails.small.url}}" alt="{{participant.first_name }} image">
+                    {% else %}
+                    <img class="w-10 h-10 rounded-full" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_1280.png" alt="{{participant.first_name }} image">
+                    {% endif%}
                     <div class="pl-3">
                         <div class="text-base font-semibold">{{participant.first_name }} {{ participant.last_name}}</div>
                         <div class="font-normal text-gray-500">{{ participant.email}} - {{participant.linkedin}}</div>
