added fullscreen image

--- a/src/card_interactions/templates/drawer.html
+++ b/src/card_interactions/templates/drawer.html
@@ -51,7 +51,7 @@
             </div>
         </div>
 
-        {% include "card_image.html" with card=card %}
+        {% include "card_image.html" with card=card id=id %}
 
 
         <div class=" bg-grey-100 my-3">
