--- a/src/card_interactions/templates/new_title.html
+++ b/src/card_interactions/templates/new_title.html
@@ -64,7 +64,9 @@
 <div cursor: pointer;" class="w-full my-4 max-w bg-white border border-gray-200 rounded-lg shadow  ">
     <div class="flex flex-col align-text-top items-center m-8">
         {% if card_url %}
-        <img class="h-auto max-w-full" src="{{card_url}}" alt="image description">
+        <a href="/card/{{card.id}}/view/image/">
+            <img class="h-auto max-w-full" src="{{card_url}}" alt="image description">
+        </a>
         {% endif %}
     </div>
     </div>
