--- a/src/card_interactions/templates/card_image.html
+++ b/src/card_interactions/templates/card_image.html
@@ -8,7 +8,7 @@
                 <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 ">Image </h5>
             </div>
             {% if user.is_authenticated%}
-            <form id='form' hx-indicator="#spinner" hx-encoding='multipart/form-data'hx-target="#drawer" hx-post='/card/{{card.id}}/upload/image/' class="p-4">
+            <form id='form' hx-indicator="#spinner" hx-encoding='multipart/form-data'hx-target="#drawer" hx-post='/card/{{id}}/upload/image/' class="p-4">
                 {% csrf_token %}
                     <div>
                     <label for="file">Add image</label>
